commit chnages for PharmaPrescriptions

--- a/10.2.0/angular/src/app/lab-technician/lab-test-receipt/lab-test-receipt.component.html
+++ b/10.2.0/angular/src/app/lab-technician/lab-test-receipt/lab-test-receipt.component.html
@@ -4,7 +4,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-6">
-          <h1>{{ 'LabTestReceipts' | localize }}</h1>
+          <h1>LabTest Receipts</h1>
         </div>
         <div class="col-6 text-right">
           <a href="javascript:;" class="btn bg-blue" (click)="createReceipt()">
