--- a/10.2.0/angular/src/app/pharmacist/create-pharmacist-prescription/create-pharmacist-prescription.component.html
+++ b/10.2.0/angular/src/app/pharmacist/create-pharmacist-prescription/create-pharmacist-prescription.component.html
@@ -2,7 +2,8 @@
     <div class="overlay" *ngIf="isSaving">
         <p-progressSpinner></p-progressSpinner>
     </div>
-    <form class="form-horizontal" autocomplete="off" #createPharmacistPrescriptionForm="ngForm" (ngSubmit)="save()">
+    <form class="form-horizontal" autocomplete="off" #createPharmacistPrescriptionForm="ngForm"
+        (ngSubmit)="AddPrescriptionItems()">
         <abp-modal-header title="Create Pharmacist Prescription" (onCloseClick)="bsModalRef.hide()"></abp-modal-header>
 
         <div class="modal-body">
@@ -28,68 +29,143 @@
                     </p-select>
                 </div>
             </div>
+            <!-- Prescription Items Table -->
 
-            <!-- Selected Tests -->
-            <div class="row mt-3" *ngIf="selectedPrescriptionItem?.length">
-                <div class="col-md-12">
-                    <h5>Selected Prescription Items</h5>
-                    <ul class="list-group">
-                        <li *ngFor="let itm of selectedPrescriptionItem" class="list-group-item">
-                            <div class="row">
-                                <div class="col-md-5">
-                                    <span><b> {{ itm.medicineName }} </b><small>({{ itm.dosage}})</small></span>
-                                </div>
-                                <div class="col-md-1">
-                                    <span>₹{{ itm.unitPrice }}</span>
-                                </div>
-                                <div class="col-md-4">
-                                    <span class="small text-muted">{{ itm.frequency }} | {{ itm.duration }}</span>
-                                </div>
-                                <div class="col-md-2 text-right">
-                                    <span>Qty : {{ itm.qty }}</span>
-                                </div>
+            <div class="mt-3">
+
+                <div *ngIf="selectedPrescriptionItem?.length>0">
+                    <div class="d-flex justify-content-between align-items-center mb-3">
+                        <h5>Selected Prescription Items</h5>
+                        <p-button label="Add Item" severity="info" icon="fa-solid fa-plus" (click)="NewItem()"
+                            *ngIf="!newPrescriptionItem" />
+                    </div>
+                    <!-- Confirmed Items Table -->
+                    <p-table [value]="selectedPrescriptionItem" class="p-datatable-sm shadow-md rounded"
+                        [tableStyle]="{ 'min-width': '40rem' }">
+                        <ng-template pTemplate="header">
+                            <tr>
+                                <th>Medicine</th>
+                                <th>Dosage</th>
+                                <th>Frequency</th>
+                                <th>Duration</th>
+                                <th>Instructions</th>
+                                <th>Price</th>
+                                <th>Qty</th>
+                                <th class="text-right">Line Total</th>
+                                <th>Action</th>
+                            </tr>
+                        </ng-template>
+                        <ng-template pTemplate="body" let-itm let-i="rowIndex">
+                            <tr>
+                                <td>{{ itm.medicineName }}</td>
+                                <td>{{ itm.dosage }}</td>
+                                <td>{{ itm.frequency }}</td>
+                                <td>{{ itm.duration }}</td>
+                                <td>{{ itm.instructions }}</td>
+                                <td>{{ itm.unitPrice }}</td>
+                                <td>
+                                    <p-inputnumber [(ngModel)]="itm.qty" [showButtons]="true" [min]="1" name="qunatity"
+                                        (onInput)="onQtyChange(itm);checkForMedicine(itm.medicineId,itm.qty)"></p-inputnumber>
+                                </td>
+                                <td class="text-right">{{ itm.unitPrice * itm.qty }}</td>
+                                <td>
+                                    <p-button *ngIf="itm._isNew" variant="text" severity="danger"
+                                        (click)="removeItem(i)" icon="fa-solid fa-xmark" />
+                                </td>
+                            </tr>
+                        </ng-template>
+                        <ng-template pTemplate="footer">
+                            <tr>
+                                <td colspan="9">
+                                    <div class="text-right">
+                                        <h5><strong>Total: ₹{{ getPrescriptionTotal() }}</strong></h5>
+                                    </div>
+                                </td>
+                            </tr>
+                        </ng-template>
+                    </p-table>
+                    <div *ngIf="newPrescriptionItem as item" class="d-flex align-items-center mt-3 mb-3">
+                        <!-- Medicine Dropdown -->
+                        <p-dropdown appendTo="self" [(ngModel)]="item.medicineId" [options]="medicineOptions"
+                            optionLabel="label" optionValue="value" placeholder="Select Medicine" class="w-25 mr-2"
+                            name="itemMedicine" (onChange)="onMedicineChange(item)">
+                        </p-dropdown>
+                        <!-- Dosage Dropdown -->
+                        <p-dropdown appendTo="self"
+                            *ngIf="item.medicineName && medicineDosageOptions[item.medicineName]"
+                            [(ngModel)]="item.dosage" [options]="getDosageOptions(item.medicineName)"
+                            optionLabel="label" optionValue="value" placeholder="Dosage" class="w-25 mr-2"
+                            name="itemDosage">
+                        </p-dropdown>
+                        <input *ngIf="!item.medicineName || !medicineDosageOptions[item.medicineName]" type="text"
+                            pInputText [(ngModel)]="item.dosage" name="itemDosage" class="w-25 mr-2"
+                            placeholder="Dosage" />
+
+                        <!-- Frequency Dropdown -->
+                        <p-dropdown appendTo="self" [(ngModel)]="item.frequency" [options]="frequencyOptions"
+                            optionLabel="label" optionValue="value" placeholder="Frequency" class="mr-2"
+                            name="itemFrequency"></p-dropdown>
+
+                        <!-- Duration (Input + Dropdown) -->
+                        <div class="d-flex mr-2">
+                            <input type="number" pInputText [(ngModel)]="item.durationValue" placeholder="Duration"
+                                class="w-50 mr-1" min="1" required name="durationValue">
+
+                            <p-dropdown appendTo="self" [(ngModel)]="item.durationUnit" [options]="durationUnits"
+                                optionLabel="label" optionValue="value" class="w-50" name="itemDurationUnit"
+                                required></p-dropdown>
+                        </div>
+
+                        <!-- Instructions Textarea -->
+                        <textarea pInputText [(ngModel)]="item.instructions" name="itemInstructions" class="mr-2"
+                            style="min-width:150px; max-width:100px; flex:1" placeholder="Instructions" rows="1"
+                            name="abcd"></textarea>
+
+                        <p-inputnumber name="medicinePrice" inputId="integeronly" [(ngModel)]="item.unitPrice"
+                            class="w-25 mr-2" placeholder="Price" [disabled]="true" />
+
+                        <p-inputnumber [(ngModel)]="item.qty" [showButtons]="true" [min]="1" name="qty"
+                            (onInput)="onQtyChange(item)"></p-inputnumber>
+
+                        <p-button variant="text" severity="success" (click)="addItem()" icon="fa-solid fa-check" />
+                        <p-button variant="text" severity="danger" (click)="newPrescriptionItem = null"
+                            icon="fa-solid fa-xmark" />
+                    </div>
+                </div>
+
+                <div class="row mt-2">
+                    <div class="col-md-12">
+                        <label>Notes</label>
+                        <textarea pTextarea [(ngModel)]="_pharmacyNotes" name="pharmacyNotes" placeholder="Notes"
+                            rows="3" class="w-100" required></textarea>
+                    </div>
+
+                </div>
+                <!-- Payment Method -->
+                <div class="row mt-3">
+                    <div class="col-md-12">
+                        <label>Payment Method</label>
+                        <div class="d-flex">
+                            <div class="payment-option" [class.active]="paymentMethod === PaymentMethod._1"
+                                (click)="setPaymentMethod(PaymentMethod._1)">
+                                💳 Card
                             </div>
-                        </li>
-                    </ul>
-                    <div class="mt-2 text-right">
-                        <strong>Total: ₹{{ getPrescriptionTotal() }}</strong>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row mt-2">
-                <div class="col-md-12">
-                    <label>Notes</label>
-                    <textarea pTextarea [(ngModel)]="pharmacyNotes" name="pharmacyNotes"
-                        placeholder="Notes" rows="3" class="w-100" required></textarea>
-                </div>
-
-            </div>
-            <!-- Payment Method -->
-            <div class="row mt-3">
-                <div class="col-md-12">
-                    <label>Payment Method</label>
-                    <div class="d-flex">
-                        <div class="payment-option" [class.active]="paymentMethod === PaymentMethod._1"
-                            (click)="setPaymentMethod(PaymentMethod._1)">
-                            💳 Card
-                        </div>
-                        <div class="payment-option ml-2" [class.active]="paymentMethod === PaymentMethod._0"
-                            (click)="setPaymentMethod(PaymentMethod._0)">
-                            💵 Cash
+                            <div class="payment-option ml-2" [class.active]="paymentMethod === PaymentMethod._0"
+                                (click)="setPaymentMethod(PaymentMethod._0)">
+                                💵 Cash
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
 
+            </div>
+            <abp-modal-footer [cancelDisabled]="isSaving"
+                [saveDisabled]="!createPharmacistPrescriptionForm.form.valid  || isSaving"
+                (onCancelClick)="bsModalRef.hide()">
+                <ng-container *ngIf="isSaving">
+                    <i class="pi pi-spin pi-spinner" style="margin-right: 8px;"></i> Saving...
+                </ng-container>
+            </abp-modal-footer>
         </div>
-
-        <abp-modal-footer [cancelDisabled]="isSaving"
-            [saveDisabled]="!createPharmacistPrescriptionForm.form.valid  || isSaving"
-            (onCancelClick)="bsModalRef.hide()">
-            <ng-container *ngIf="isSaving">
-                <i class="pi pi-spin pi-spinner" style="margin-right: 8px;"></i> Saving...
-            </ng-container>
-        </abp-modal-footer>
     </form>
 </div>
