add deposit transaction module.

--- a/10.2.0/angular/src/app/deposit/deposit.component.html
+++ b/10.2.0/angular/src/app/deposit/deposit.component.html
@@ -75,6 +75,9 @@
                         <li (click)="viewReceipts(selectedRecord)">
                           <i class="pi pi-file"></i> View Deposit Receipts
                         </li>
+                        <li (click)="viewTransactions(selectedRecord)">
+                          <i class="pi pi-list"></i> View Transactions
+                        </li>
                       </ul>
                     </p-overlayPanel>
                   </td>
