--- a/10.2.0/angular/src/app/pharmacist/view-pharmacist-prescription/view-pharmacist-prescription.component.html
+++ b/10.2.0/angular/src/app/pharmacist/view-pharmacist-prescription/view-pharmacist-prescription.component.html
@@ -8,7 +8,7 @@
     </div>
 
     <!-- Title -->
-    <h3 class="text-center mb-4" style="color: #007ad9;">E-Prescription</h3>
+    <h3 class="text-center mb-4" style="color: #007ad9;">E-Prescription ({{prescription.pharmacistPrescriptionId}})</h3>
 
     <!-- Patient Info -->
     <div class="row">
