--- a/10.2.0/angular/src/app/pharmacist/create-pharmacist-prescription/create-pharmacist-prescription.component.html
+++ b/10.2.0/angular/src/app/pharmacist/create-pharmacist-prescription/create-pharmacist-prescription.component.html
@@ -3,7 +3,7 @@
         <p-progressSpinner></p-progressSpinner>
     </div>
     <form class="form-horizontal" autocomplete="off" #createPharmacistPrescriptionForm="ngForm"
-        (ngSubmit)="AddPrescriptionItems()">
+        (ngSubmit)="save()">
         <abp-modal-header title="Create Pharmacist Prescription" (onCloseClick)="bsModalRef.hide()"></abp-modal-header>
 
         <div class="modal-body">
@@ -65,7 +65,7 @@
                                 <td>{{ itm.unitPrice }}</td>
                                 <td>
                                     <p-inputnumber [(ngModel)]="itm.qty" [showButtons]="true" [min]="1" name="qunatity"
-                                        (onInput)="onQtyChange(itm);checkForMedicine(itm.medicineId,itm.qty)"></p-inputnumber>
+                                        (onInput)="onQtyChange(itm);"></p-inputnumber>
                                 </td>
                                 <td class="text-right">{{ itm.unitPrice * itm.qty }}</td>
                                 <td>
@@ -84,53 +84,55 @@
                             </tr>
                         </ng-template>
                     </p-table>
-                    <div *ngIf="newPrescriptionItem as item" class="d-flex align-items-center mt-3 mb-3">
-                        <!-- Medicine Dropdown -->
-                        <p-dropdown appendTo="self" [(ngModel)]="item.medicineId" [options]="medicineOptions"
-                            optionLabel="label" optionValue="value" placeholder="Select Medicine" class="w-25 mr-2"
-                            name="itemMedicine" (onChange)="onMedicineChange(item)">
-                        </p-dropdown>
-                        <!-- Dosage Dropdown -->
-                        <p-dropdown appendTo="self"
-                            *ngIf="item.medicineName && medicineDosageOptions[item.medicineName]"
-                            [(ngModel)]="item.dosage" [options]="getDosageOptions(item.medicineName)"
-                            optionLabel="label" optionValue="value" placeholder="Dosage" class="w-25 mr-2"
-                            name="itemDosage">
-                        </p-dropdown>
-                        <input *ngIf="!item.medicineName || !medicineDosageOptions[item.medicineName]" type="text"
-                            pInputText [(ngModel)]="item.dosage" name="itemDosage" class="w-25 mr-2"
-                            placeholder="Dosage" />
+                    <form #itemForm="ngForm">
+                        <div *ngIf="newPrescriptionItem as item" class="d-flex align-items-center mt-3 mb-3">
+                            <!-- Medicine Dropdown -->
+                            <p-dropdown appendTo="self" [(ngModel)]="item.medicineId" [options]="medicineOptions"
+                                optionLabel="label" optionValue="value" placeholder="Select Medicine" class="w-25 mr-2"
+                                name="itemMedicine" (onChange)="onMedicineChange(item)" required>
+                            </p-dropdown>
+                            <!-- Dosage Dropdown -->
+                            <p-dropdown appendTo="self"
+                                *ngIf="item.medicineName && medicineDosageOptions[item.medicineName]"
+                                [(ngModel)]="item.dosage" [options]="getDosageOptions(item.medicineName)"
+                                optionLabel="label" optionValue="value" placeholder="Dosage" class="w-25 mr-2"
+                                name="itemDosage" required>
+                            </p-dropdown>
+                            <input *ngIf="!item.medicineName || !medicineDosageOptions[item.medicineName]" type="text"
+                                pInputText [(ngModel)]="item.dosage" name="itemDosage" class="w-25 mr-2"
+                                placeholder="Dosage" required />
 
-                        <!-- Frequency Dropdown -->
-                        <p-dropdown appendTo="self" [(ngModel)]="item.frequency" [options]="frequencyOptions"
-                            optionLabel="label" optionValue="value" placeholder="Frequency" class="mr-2"
-                            name="itemFrequency"></p-dropdown>
+                            <!-- Frequency Dropdown -->
+                            <p-dropdown appendTo="self" [(ngModel)]="item.frequency" [options]="frequencyOptions"
+                                optionLabel="label" optionValue="value" placeholder="Frequency" class="mr-2"
+                                name="itemFrequency" required></p-dropdown>
 
-                        <!-- Duration (Input + Dropdown) -->
-                        <div class="d-flex mr-2">
-                            <input type="number" pInputText [(ngModel)]="item.durationValue" placeholder="Duration"
-                                class="w-50 mr-1" min="1" required name="durationValue">
+                            <!-- Duration (Input + Dropdown) -->
+                            <div class="d-flex mr-2">
+                                <input type="number" pInputText [(ngModel)]="item.durationValue" placeholder="Duration"
+                                    class="w-50 mr-1" min="1" required name="durationValue" required>
 
-                            <p-dropdown appendTo="self" [(ngModel)]="item.durationUnit" [options]="durationUnits"
-                                optionLabel="label" optionValue="value" class="w-50" name="itemDurationUnit"
-                                required></p-dropdown>
+                                <p-dropdown appendTo="self" [(ngModel)]="item.durationUnit" [options]="durationUnits"
+                                    optionLabel="label" optionValue="value" class="w-50" name="itemDurationUnit"
+                                    required></p-dropdown>
+                            </div>
+
+                            <!-- Instructions Textarea -->
+                            <textarea pInputText [(ngModel)]="item.instructions" name="itemInstructions" class="mr-2"
+                                style="min-width:150px; max-width:100px; flex:1" placeholder="Instructions" rows="1"
+                                name="abcd" required></textarea>
+
+                            <p-inputnumber name="medicinePrice" inputId="integeronly" [(ngModel)]="item.unitPrice"
+                                class="w-25 mr-2" placeholder="Price" [disabled]="true" />
+
+                            <p-inputnumber [(ngModel)]="item.qty" [showButtons]="true" [min]="1" name="qty"
+                                (onInput)="onQtyChange(item)"></p-inputnumber>
+
+                            <p-button variant="text" severity="success" (click)="addItem()" icon="fa-solid fa-check" [disabled]="!itemForm.form.valid" />
+                            <p-button variant="text" severity="danger" (click)="newPrescriptionItem = null"
+                                icon="fa-solid fa-xmark" />
                         </div>
-
-                        <!-- Instructions Textarea -->
-                        <textarea pInputText [(ngModel)]="item.instructions" name="itemInstructions" class="mr-2"
-                            style="min-width:150px; max-width:100px; flex:1" placeholder="Instructions" rows="1"
-                            name="abcd"></textarea>
-
-                        <p-inputnumber name="medicinePrice" inputId="integeronly" [(ngModel)]="item.unitPrice"
-                            class="w-25 mr-2" placeholder="Price" [disabled]="true" />
-
-                        <p-inputnumber [(ngModel)]="item.qty" [showButtons]="true" [min]="1" name="qty"
-                            (onInput)="onQtyChange(item)"></p-inputnumber>
-
-                        <p-button variant="text" severity="success" (click)="addItem()" icon="fa-solid fa-check" />
-                        <p-button variant="text" severity="danger" (click)="newPrescriptionItem = null"
-                            icon="fa-solid fa-xmark" />
-                    </div>
+                    </form>
                 </div>
 
                 <div class="row mt-2">
