--- a/10.2.0/angular/src/app/pharmacist/edit-pharmacist-prescription/edit-pharmacist-prescription.component.html
+++ b/10.2.0/angular/src/app/pharmacist/edit-pharmacist-prescription/edit-pharmacist-prescription.component.html
@@ -2,7 +2,7 @@
     <div class="overlay" *ngIf="isSaving">
         <p-progressSpinner></p-progressSpinner>
     </div>
-    <form class="form-horizontal" autocomplete="off" #createPharmacistPrescriptionForm="ngForm" (ngSubmit)="AddPrescriptionItems()">
+    <form class="form-horizontal" autocomplete="off" #createPharmacistPrescriptionForm="ngForm" (ngSubmit)="save()">
         <abp-modal-header title="Edit Pharmacist Prescription" (onCloseClick)="bsModalRef.hide()"></abp-modal-header>
 
         <div class="modal-body">
@@ -69,51 +69,57 @@
                         </tr>
                     </ng-template>
                 </p-table>
+                <form #itemForm="ngForm">
+                    <div *ngIf="newPrescriptionItem as item" class="d-flex align-items-center mt-3 mb-3">
+                        <!-- Medicine Dropdown -->
+                        <p-dropdown appendTo="self" [(ngModel)]="item.medicineId" [options]="medicineOptions"
+                            optionLabel="label" optionValue="value" placeholder="Select Medicine" class="w-25 mr-2"
+                            name="itemMedicine" [optionDisabled]="'disabled'" (onChange)="onMedicineChange(item)"
+                            required>
+                        </p-dropdown>
+                        <!-- Dosage Dropdown -->
+                        <p-dropdown appendTo="self"
+                            *ngIf="item.medicineName && medicineDosageOptions[item.medicineName]"
+                            [(ngModel)]="item.dosage" [options]="getDosageOptions(item.medicineName)"
+                            optionLabel="label" optionValue="value" placeholder="Dosage" class="w-25 mr-2"
+                            name="itemDosage" required>
+                        </p-dropdown>
+                        <input *ngIf="!item.medicineName || !medicineDosageOptions[item.medicineName]" type="text"
+                            pInputText [(ngModel)]="item.dosage" name="itemDosage" class="w-25 mr-2"
+                            placeholder="Dosage" required />
 
-                <div *ngIf="newPrescriptionItem as item" class="d-flex align-items-center mt-3 mb-3">
-                    <!-- Medicine Dropdown -->
-                    <p-dropdown appendTo="self" [(ngModel)]="item.medicineId" [options]="medicineOptions"
-                        optionLabel="label" optionValue="value" placeholder="Select Medicine" class="w-25 mr-2"
-                        name="itemMedicine" (onChange)="onMedicineChange(item)">
-                    </p-dropdown>
-                    <!-- Dosage Dropdown -->
-                    <p-dropdown appendTo="self" *ngIf="item.medicineName && medicineDosageOptions[item.medicineName]"
-                        [(ngModel)]="item.dosage" [options]="getDosageOptions(item.medicineName)" optionLabel="label"
-                        optionValue="value" placeholder="Dosage" class="w-25 mr-2" name="itemDosage">
-                    </p-dropdown>
-                    <input *ngIf="!item.medicineName || !medicineDosageOptions[item.medicineName]" type="text"
-                        pInputText [(ngModel)]="item.dosage" name="itemDosage" class="w-25 mr-2" placeholder="Dosage" />
+                        <!-- Frequency Dropdown -->
+                        <p-dropdown appendTo="self" [(ngModel)]="item.frequency" [options]="frequencyOptions"
+                            optionLabel="label" optionValue="value" placeholder="Frequency" class="mr-2"
+                            name="itemFrequency" required></p-dropdown>
 
-                    <!-- Frequency Dropdown -->
-                    <p-dropdown appendTo="self" [(ngModel)]="item.frequency" [options]="frequencyOptions"
-                        optionLabel="label" optionValue="value" placeholder="Frequency" class="mr-2"
-                        name="itemFrequency"></p-dropdown>
+                        <!-- Duration (Input + Dropdown) -->
+                        <div class="d-flex mr-2">
+                            <input type="number" pInputText [(ngModel)]="item.durationValue" placeholder="Duration"
+                                class="w-50 mr-1" min="1" required name="durationValue" required>
 
-                    <!-- Duration (Input + Dropdown) -->
-                    <div class="d-flex mr-2">
-                        <input type="number" pInputText [(ngModel)]="item.durationValue" placeholder="Duration"
-                            class="w-50 mr-1" min="1" required name="durationValue">
+                            <p-dropdown appendTo="self" [(ngModel)]="item.durationUnit" [options]="durationUnits"
+                                optionLabel="label" optionValue="value" class="w-50" name="itemDurationUnit"
+                                required></p-dropdown>
+                        </div>
 
-                        <p-dropdown appendTo="self" [(ngModel)]="item.durationUnit" [options]="durationUnits"
-                            optionLabel="label" optionValue="value" class="w-50" name="itemDurationUnit"
-                            required></p-dropdown>
+                        <!-- Instructions Textarea -->
+                        <textarea pInputText [(ngModel)]="item.instructions" name="itemInstructions" class="mr-2"
+                            style="min-width:150px; max-width:100px; flex:1" placeholder="Instructions" rows="1"
+                            name="abcd" required></textarea>
+
+                        <p-inputnumber name="medicinePrice" inputId="integeronly" [(ngModel)]="item.unitPrice"
+                            class="w-25 mr-2" placeholder="Price" [disabled]="true" />
+
+                        <p-inputnumber [(ngModel)]="item.qty" [showButtons]="true" [min]="1" name="qty"
+                            (onInput)="onQtyChange(item)"></p-inputnumber>
+
+                        <p-button variant="text" severity="success" (click)="addItem()" icon="fa-solid fa-check"
+                            [disabled]="!itemForm.form.valid" />
+                        <p-button variant="text" severity="danger" (click)="newPrescriptionItem = null"
+                            icon="fa-solid fa-xmark" />
                     </div>
-
-                    <!-- Instructions Textarea -->
-                    <textarea pInputText [(ngModel)]="item.instructions" name="itemInstructions" class="mr-2"
-                        style="min-width:150px; max-width:100px; flex:1" placeholder="Instructions" rows="1"
-                        name="abcd"></textarea>
-
-                    <p-inputnumber name="medicinePrice" inputId="integeronly" [(ngModel)]="item.unitPrice"
-                        class="w-25 mr-2" placeholder="Price" [disabled]="true" />
-
-                    <p-inputnumber [(ngModel)]="item.qty" [showButtons]="true" [min]="1" name="qty"
-                        (onInput)="onQtyChange(item)"></p-inputnumber>
-
-                    <p-button variant="text" severity="success" (click)="addItem()" icon="fa-solid fa-check" />
-                    <p-button variant="text" severity="danger" (click)="newPrescriptionItem = null"
-                        icon="fa-solid fa-xmark" />
-                </div>
+                </form>
             </div>
 
             <div class="row mt-2">
