--- a/10.2.0/angular/src/app/pharmacist/edit-pharmacist-prescription/edit-pharmacist-prescription.component.html
+++ b/10.2.0/angular/src/app/pharmacist/edit-pharmacist-prescription/edit-pharmacist-prescription.component.html
@@ -6,7 +6,7 @@
         <abp-modal-header title="Edit Pharmacist Prescription" (onCloseClick)="bsModalRef.hide()"></abp-modal-header>
 
         <div class="modal-body">
-            <!-- Prescription (Only if OPD) -->
+            <!-- Selected Prescription -->
             <div class="row">
                 <div class="col-md-12">
                     <label>Selected Prescription</label>
@@ -18,15 +18,15 @@
             </div>
 
             <!-- Prescription Items Table -->
-            <div *ngIf="selectedPrescriptionItem?.length>0" class="mt-3">
+            <div *ngIf="selectedPrescriptionItem?.length > 0" class="mt-3">
                 <div class="d-flex justify-content-between align-items-center mb-3">
                     <h5>Selected Prescription Items</h5>
                     <p-button label="Add Item" severity="info" icon="fa-solid fa-plus" (click)="NewItem()"
-                        *ngIf="!newPrescriptionItem" />
+                        *ngIf="!newPrescriptionItem"></p-button>
                 </div>
-                <!-- Confirmed Items Table -->
+
                 <p-table [value]="selectedPrescriptionItem" class="p-datatable-sm shadow-md rounded"
-                    [tableStyle]="{ 'min-width': '40rem' }">
+                    [tableStyle]="{ 'min-width': '40rem' }" [dataKey]="'_rowId'">
                     <ng-template pTemplate="header">
                         <tr>
                             <th>Medicine</th>
@@ -47,37 +47,39 @@
                             <td>{{ itm.frequency }}</td>
                             <td>{{ itm.duration }}</td>
                             <td>{{ itm.instructions }}</td>
-                            <td>{{ itm.unitPrice }}</td>
-                            <td>
-                                <p-inputnumber [(ngModel)]="itm.qty" [showButtons]="true" [min]="1" name="qunatity"
-                                    (onInput)="onQtyChange(itm)"></p-inputnumber>
+                            <td>{{ itm.unitPrice | number:'1.2-2' }}</td>
+                            <td style="width:140px;">
+                                <p-inputNumber [(ngModel)]="itm.qty" [showButtons]="true" [min]="1"
+                                    name="quantity{{itm._rowId}}" (ngModelChange)="onQtyChange(itm, $event)">
+                                </p-inputNumber>
                             </td>
-                            <td class="text-right">{{ itm.unitPrice * itm.qty }}</td>
+                            <td class="text-right">{{ (itm.unitPrice * itm.qty) | number:'1.2-2' }}</td>
                             <td>
                                 <p-button *ngIf="itm._isNew" variant="text" severity="danger" (click)="removeItem(i)"
-                                    icon="fa-solid fa-xmark" />
+                                    icon="fa-solid fa-xmark"></p-button>
                             </td>
                         </tr>
                     </ng-template>
+
                     <ng-template pTemplate="footer">
                         <tr>
                             <td colspan="9">
                                 <div class="text-right">
-                                    <h5><strong>Total: ₹{{ getPrescriptionTotal() }}</strong></h5>
+                                    <h5><strong>Total: ₹{{ getPrescriptionTotal() | number:'1.2-2' }}</strong></h5>
                                 </div>
                             </td>
                         </tr>
                     </ng-template>
                 </p-table>
+
+                <p-toast></p-toast>
                 <form #itemForm="ngForm">
+                    <!-- New Item Row -->
                     <div *ngIf="newPrescriptionItem as item" class="d-flex align-items-center mt-3 mb-3">
-                        <!-- Medicine Dropdown -->
                         <p-dropdown appendTo="self" [(ngModel)]="item.medicineId" [options]="medicineOptions"
                             optionLabel="label" optionValue="value" placeholder="Select Medicine" class="w-25 mr-2"
-                            name="itemMedicine" [optionDisabled]="'disabled'" (onChange)="onMedicineChange(item)"
-                            required>
+                            name="itemMedicine" [optionDisabled]="'disabled'" (onChange)="onMedicineChange(item)" required>
                         </p-dropdown>
-                        <!-- Dosage Dropdown -->
                         <p-dropdown appendTo="self"
                             *ngIf="item.medicineName && medicineDosageOptions[item.medicineName]"
                             [(ngModel)]="item.dosage" [options]="getDosageOptions(item.medicineName)"
@@ -88,36 +90,32 @@
                             pInputText [(ngModel)]="item.dosage" name="itemDosage" class="w-25 mr-2"
                             placeholder="Dosage" required />
 
-                        <!-- Frequency Dropdown -->
                         <p-dropdown appendTo="self" [(ngModel)]="item.frequency" [options]="frequencyOptions"
                             optionLabel="label" optionValue="value" placeholder="Frequency" class="mr-2"
                             name="itemFrequency" required></p-dropdown>
 
-                        <!-- Duration (Input + Dropdown) -->
                         <div class="d-flex mr-2">
                             <input type="number" pInputText [(ngModel)]="item.durationValue" placeholder="Duration"
-                                class="w-50 mr-1" min="1" required name="durationValue" required>
-
+                                class="w-50 mr-1" min="1" required name="durationValue">
                             <p-dropdown appendTo="self" [(ngModel)]="item.durationUnit" [options]="durationUnits"
-                                optionLabel="label" optionValue="value" class="w-50" name="itemDurationUnit"
-                                required></p-dropdown>
+                                optionLabel="label" optionValue="value" class="w-50" name="itemDurationUnit" required>
+                            </p-dropdown>
                         </div>
 
-                        <!-- Instructions Textarea -->
                         <textarea pInputText [(ngModel)]="item.instructions" name="itemInstructions" class="mr-2"
-                            style="min-width:150px; max-width:100px; flex:1" placeholder="Instructions" rows="1"
-                            name="abcd" required></textarea>
+                            style="min-width:150px; max-width:100px; flex:1" placeholder="Instructions"
+                            rows="1"></textarea>
 
-                        <p-inputnumber name="medicinePrice" inputId="integeronly" [(ngModel)]="item.unitPrice"
-                            class="w-25 mr-2" placeholder="Price" [disabled]="true" />
+                        <p-inputNumber name="medicinePrice" inputId="integeronly" [(ngModel)]="item.unitPrice"
+                            class="w-25 mr-2" placeholder="Price" [disabled]="true"></p-inputNumber>
 
-                        <p-inputnumber [(ngModel)]="item.qty" [showButtons]="true" [min]="1" name="qty"
-                            (onInput)="onQtyChange(item)"></p-inputnumber>
+                        <p-inputNumber [(ngModel)]="item.qty" [showButtons]="true" [min]="1" name="qtyNewItem"
+                            (ngModelChange)="onQtyChange(item, $event)"></p-inputNumber>
 
-                        <p-button variant="text" severity="success" (click)="addItem()" icon="fa-solid fa-check"
-                            [disabled]="!itemForm.form.valid" />
+                        <p-button variant="text" severity="success" (click)="addItem()"
+                            icon="fa-solid fa-check" [disabled]="!itemForm.form.valid"></p-button>
                         <p-button variant="text" severity="danger" (click)="newPrescriptionItem = null"
-                            icon="fa-solid fa-xmark" />
+                            icon="fa-solid fa-xmark"></p-button>
                     </div>
                 </form>
             </div>
@@ -128,7 +126,6 @@
                     <textarea pTextarea [(ngModel)]="_pharmacyNotes" name="pharmacyNotes" placeholder="Notes" rows="3"
                         class="w-100" required></textarea>
                 </div>
-
             </div>
             <!-- Payment Method -->
             <div class="row mt-3">
@@ -146,11 +143,10 @@
                     </div>
                 </div>
             </div>
-
         </div>
 
         <abp-modal-footer [cancelDisabled]="isSaving"
-            [saveDisabled]="!createPharmacistPrescriptionForm.form.valid  || isSaving"
+            [saveDisabled]="!createPharmacistPrescriptionForm.form.valid || isSaving"
             (onCancelClick)="bsModalRef.hide()">
             <ng-container *ngIf="isSaving">
                 <i class="pi pi-spin pi-spinner" style="margin-right: 8px;"></i> Saving...
