add filter in backend

--- a/10.2.0/angular/src/app/admission/create-addmission/create-addmission.component.html
+++ b/10.2.0/angular/src/app/admission/create-addmission/create-addmission.component.html
@@ -12,7 +12,7 @@
             <div class="col-md-6 d-flex flex-column">
                 <label>Select Doctor</label>
                 <p-select [(ngModel)]="admission.doctorId" [optionValue]="'id'" name="doctorId" [options]="doctors"
-                    optionLabel="fullName" placeholder="Select doctor" class="w-100" required [disabled]="disableRoleSelection"/>
+                    optionLabel="fullName" placeholder="Select doctor" class="w-100" required />
             </div>
             <div class="col-md-6 d-flex flex-column">
                 <label>Select Nurse</label>
