complete payment method in medicine module.

--- a/10.2.0/angular/src/app/pharmacist/edit-pharmacist-prescription/edit-pharmacist-prescription.component.html
+++ b/10.2.0/angular/src/app/pharmacist/edit-pharmacist-prescription/edit-pharmacist-prescription.component.html
@@ -128,7 +128,7 @@
                 </div>
             </div>
             <!-- Payment Method -->
-            <div class="row mt-3">
+            <!-- <div class="row mt-3">
                 <div class="col-md-12">
                     <label>Payment Method</label>
                     <div class="d-flex">
@@ -142,7 +142,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
 
         <abp-modal-footer [cancelDisabled]="isSaving"
