--- a/10.2.0/angular/src/app/pharmacist/edit-medicine/edit-medicine.component.html
+++ b/10.2.0/angular/src/app/pharmacist/edit-medicine/edit-medicine.component.html
@@ -26,7 +26,7 @@
             <div class="col-md-6 d-flex flex-column">
                 <label for="purchaseDate">Purchase Date</label>
                 <p-datepicker [(ngModel)]="inventory.purchaseDate" name="purchaseDate" [showIcon]="true"
-                    placeholder="Select purchase date" class="w-100" style="width: 100%;" required />
+                    placeholder="Select purchase date" class="w-100"  required />
             </div>
             <div class="col-md-6 d-flex flex-column">
                 <label for="expiryDate">Expiry Date</label>
